Teste erro nas imagens

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </ul>
             </nav>
             <div class="nav-icon-container">
-                <img src="/imagens/cart.png">
-                <img src="/imagens/menu.png" class="menu-button">
+                <img src="./imagens/cart.png">
+                <img src="./imagens/menu.png" class="menu-button">
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
                     <button>Ver Agora &#8594;</button>
                 </div>
                 <div class="header-button-side-right">
-                    <img src="/imagens/gaming-msi-header.png" alt="">
+                    <img src="./imagens/gaming-msi-header.png" alt="">
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
                         <button>Ver Agora &#8594;</button>
                     </div>
                     <div class="header-button-side-right">
-                        <img src="/imagens/exclusive.png" alt="">
+                        <img src="./imagens/exclusive.png" alt="">
                     </div>
                 </div>
             </div>
